--- a/20210902_ToScA.tex
+++ b/20210902_ToScA.tex
@@ -25,7 +25,7 @@
 	style=numeric,
 	url=false,
 	maxnames=1,
-	sorting=none
+	sorting=none,
 	]{biblatex}
 \addbibresource{~/P/Documents/library.bib}
 %\addbibresource{../../Documents/library.bib}
@@ -37,7 +37,7 @@
 \usepackage{shadowtext}  % for the shadowed scalebar
 	\shadowoffset{1pt}
 	\shadowcolor{ubRed}
-\usepackage[absolute,overlay]{textpos} %for the \source* command	
+\usepackage[absolute,overlay]{textpos} % for the \source* command	
 \usepackage{fontawesome5}
 \usepackage{listings}
 	\lstset{frame=single,
@@ -48,7 +48,7 @@
 % Some often used abbreviations/commands
 \newcommand{\everyframe}{333} % use only every nth frame for the animations
 \newcommand{\imwidth}{\linewidth}% set global image width
-\newcommand{\imheight}{0.618\paperheight}% set global image height
+\newcommand{\imheight}{0.8\paperheight}% set global image height
 \newlength\imagewidth% needed for scalebars
 \newlength\imagescale% needed for scalebars
 \newcommand{\uct}{\si{\micro}CT\xspace}% make our life easier
@@ -164,13 +164,14 @@
 		\begin{itemize}
 			\item Physicist by trade
 			\item \href{https://boris.unibe.ch/2619/}{PhD in high resolution imaging of the lung}
-			\item Post-Doc I: \href{https://www.psi.ch/sls/tomcat/}{TOMCAT}, \href{https://www.psi.ch/sls/}{Swiss Light Source}, \href{https://www.psi.ch/}{Paul Scherrer Institute}
-			\item Post-Doc II: \uct-group, at the Institute of Anatomy of the University of Bern. With Ruslan Hlushchuk, Oleksiy-Zakhar Khoma and Tim Hoessly
+			\item Post-Doc I: \href{https://www.psi.ch/sls/tomcat/}{TOMCAT}, \href{https://www.psi.ch/sls/}{Swiss Light Source}, \href{https://www.psi.ch/}{Paul Scherrer Institute}, Switzerland
+			\item Post-Doc II: \uct-group, at the Institute of Anatomy of the University of Bern, Switzerland.
+				With Ruslan Hlushchuk, Oleksiy-Zakhar Khoma and Tim Hoessly
 		\end{itemize}
 	\end{itemize}
 \end{frame}
 
-\renewcommand{\imheight}{0.5\paperheight}% set global image height
+\renewcommand{\imheight}{0.5\paperheight}
 \begin{frame}[label=current]
 	\frametitle{Grüessech!}		
 	\begin{columns}
@@ -188,7 +189,7 @@
 				\item Automate \emph{all} the things!~\cite{Haberthur2020}
 			\end{itemize}
 		\end{column}
-		\begin{column}{0.38\linewidth}
+		\begin{column}{0.382\linewidth}
 			\centering
 			\includegraphics<1>[height=\imheight]{./images/1172}%
 			\only<1>{\source{brukersupport.com}{}}
@@ -216,7 +217,7 @@
 \begin{frame}
 	\frametitle{How?}
 	\begin{columns}
-		\begin{column}{0.49\linewidth}
+		\begin{column}{0.5\linewidth}
 			\begin{itemize}
 				\item<1-> 104 extracted human permanent mandibular canines
 				\item<2-> \uct imaging
@@ -225,13 +226,13 @@
 					\item<4-> Root canal  morphology, according to~\citeauthor{Briseno-Marroquin2015}~\cite{Briseno-Marroquin2015}
 					\item<5-> Foramen geometry and size, according to~\citeauthor{Wolf2017}~\cite{Wolf2017}
 				\end{itemize}
-				\item<6-> \emph{Reproducible} analysis~\cite{Haberthur2020a}\onslide<7>{, \eg you can \href{https://mybinder.org/v2/gh/habi/zmk-tooth-cohort/master?filepath=ToothAnalysis.ipynb}{click a button to double-check} or \href{https://nbviewer.jupyter.org/github/habi/zmk-tooth-cohort/blob/master/ToothAnalysis.ipynb}{view it yourself}}
+				\item<6-> \emph{Reproducible} analysis~\cite{Haberthur2020a}\onslide<7>{, \eg you can \href{https://mybinder.org/v2/gh/habi/zmk-tooth-cohort/master?filepath=ToothAnalysis.ipynb}{click a button to double-check} or \href{https://nbviewer.jupyter.org/github/habi/zmk-tooth-cohort/blob/master/ToothAnalysis.ipynb}{recalculate the results yourself!}}
 			\end{itemize}
 		\end{column}
-		\begin{column}{0.49\linewidth}
+		\begin{column}{0.5\linewidth}
 			\only<1>{%
 				\centering
-				\renewcommand{\imwidth}{0.618\linewidth}% set global image width
+				\renewcommand{\imwidth}{0.8\linewidth}% set global image width
 				\pgfmathsetlength{\imagewidth}{\imwidth}%
 				\pgfmathsetlength{\imagescale}{\imagewidth/2716}%
 				\def\x{1678}% scalebar-x starting at golden ratio of image width of 2716px = 1678
@@ -256,11 +257,11 @@
 				\end{itemize}					
 					}%		
 			\only<4>{%
-				\includegraphics[width=\textwidth]{./images/briseno}%
+				\includegraphics[width=\linewidth]{./images/briseno}%
 				\sourcecite{Briseno-Marroquin2015}{Fig.~2}%
 				}%
 			\only<5>{%
-				\includegraphics[width=\textwidth]{./images/foramen}%
+				\includegraphics[width=\linewidth]{./images/foramen}%
 				\sourcecite{Wolf2017}{Fig.~1}%
 				}%		
 			\only<6>{%
@@ -276,6 +277,7 @@
 \end{frame}
 
 \subsection{\uct imaging}
+\renewcommand{\imheight}{0.618\paperheight}
 \begin{frame}
 	\frametitle{\uct imaging}
 	\centering
@@ -287,37 +289,15 @@
 \begin{frame}
 	\frametitle{Dataset cropping}
 	\begin{columns}
-		\begin{column}{0.309\linewidth}	
+		\begin{column}{0.382\linewidth}	
 			\begin{itemize}
 				\item Full datasets: \SI{326}{\giga\byte}
-				\item \uncover<2->{Cropped: \SI{115}{\giga\byte}}
+				\item Cropped datasets: \SI{115}{\giga\byte}
 			\end{itemize}
 		\end{column}	
 		\begin{column}{0.618\linewidth}
-			\centering
-			\renewcommand{\imwidth}{\columnwidth}%
-			\only<1>{%
-				\pgfmathsetlength{\imagewidth}{\imwidth}%
-				\pgfmathsetlength{\imagescale}{\imagewidth/2585}%
-				\def\x{1598}% scalebar-x starting at golden ratio of image width of 2585px = 1598
-				\def\y{1469}% scalebar-y at 90% of image height of 1632px = 1469
-				\begin{tikzpicture}[x=\imagescale,y=-\imagescale]
-					\node[anchor=north west, inner sep=0pt, outer sep=0pt] at (0,0) {\includegraphics[width=\imagewidth]{./images/tooth045/{{Tooth045.mip.rec}}}};
-					% 2585.000px = 25.849963810000002mm -> 100px = 999.999um -> 50.000px = 500um, 10.000px = 100um
-					\draw[|-|,white,shadowed] (\x,\y) -- (\x+500,\y) node [midway,above] {\shadowtext{\SI{5}{\milli\meter}}};
-				\end{tikzpicture}%
-				}%
-			\only<2>{%
-				\pgfmathsetlength{\imagewidth}{\imwidth}%
-				\pgfmathsetlength{\imagescale}{\imagewidth/2391}%
-				\def\x{1478}% scalebar-x starting at golden ratio of image width of 2391px = 1478
-				\def\y{547}% scalebar-y at 90% of image height of 608px = 547
-				\begin{tikzpicture}[x=\imagescale,y=-\imagescale]
-					\node[anchor=north west, inner sep=0pt, outer sep=0pt] at (0,0) {\includegraphics[width=\imagewidth]{./images/tooth045/{{Tooth045.mip.rec.crop}}}};
-					% 2391.000px = 23.909966526mm -> 100px = 999.999um -> 50.000px = 500um, 10.000px = 100um
-					\draw[|-|,white,shadowed] (\x,\y) -- (\x+500,\y) node [midway,above] {\shadowtext{\SI{5}{\milli\meter}}};
-				\end{tikzpicture}%
-				}%
+			\includegraphics<1>[width=\linewidth]{./images/tooth045/{{Tooth045.Cropper.Original}}}
+			\includegraphics<2>[width=\linewidth]{./images/tooth045/{{Tooth045.Cropper.Cropped}}}			
 		\end{column}	
 	\end{columns}		
 \end{frame}
@@ -325,7 +305,7 @@
 \begin{frame}
 	\frametitle{Tooth morphology}
 	\begin{tikzpicture}[remember picture,overlay]%
-		\node at (current page.center){%
+		\node at (current page.center) [shift={(0,-25pt)}]{%
 			\only<1>{\animategraphics[autoplay,loop,width=\paperwidth,every=\everyframe]{24}{./movies/tooth045/full/image0}{000}{474}}%
 			\only<2>{\animategraphics[autoplay,loop,width=\paperwidth,every=\everyframe]{24}{./movies/tooth045/full-slices/image0}{000}{466}}%
 			};%
@@ -350,7 +330,7 @@
 \begin{frame}
 	\frametitle{Extraction of pulpa}
 	\begin{tikzpicture}[remember picture,overlay]%
-	\node at (current page.center){
+	\node at (current page.center) [shift={(0,-25pt)}]{%
 		\only<1>{\animategraphics[autoplay,loop,width=\paperwidth,every=\everyframe]{24}{./movies/tooth045/transparent-slices/image0}{000}{473}}%
 		\only<2>{\animategraphics[autoplay,loop,width=\paperwidth,every=\everyframe]{24}{./movies/tooth045/transparent-slices-pulpa/image0}{000}{457}}%
 		\only<3>{\animategraphics[autoplay,loop,width=\paperwidth,every=\everyframe]{24}{./movies/tooth045/pulpa/image0}{000}{413}}%
@@ -418,21 +398,21 @@
 	\end{itemize}
 	\only<2>{%
 		\begin{tikzpicture}[remember picture,overlay]%
-			\node at (current page.center){%
+			\node at (current page.center) [shift={(0,-25pt)}]{%
 				\animategraphics[autoplay,loop,width=\paperwidth,every=\everyframe]{24}{./movies/tooth045/full-slices/image0}{000}{466}%
 				};%
 		\end{tikzpicture}%
 	}%
 \end{frame}
 
-\begin{frame}[shrink=30]
+\begin{frame}[shrink] % `shrink' tries to autofit the content onto the slide, useful for very long lists of references
 	\frametitle{References}
 	% Make the references continuously smaller :)
 	%\renewcommand*{\bibfont}{\small}
 	%\renewcommand*{\bibfont}{\footnotesize}
 	%\renewcommand*{\bibfont}{\scriptsize}
 	\renewcommand*{\bibfont}{\tiny}
-	%\setbeamertemplate{bibliography item}{\insertbiblabel}
+	\setbeamertemplate{bibliography item}{\insertbiblabel}
 	\printbibliography
 \end{frame}
 
